# no-thanks-optimizer

./: README.md  best_model_log.txt  best_model_log_256_256.txt  best_model_log_256_256_256.txt  no_thanks_rl.py  no_thanks_rl_eval.py  no_thanks_rl_multi_policy.py  no_thanks_rl_play.py  no_thanks_rl_play_multi_policy.py  pyproject.toml  scratch.py
archive/: no_thanks_rl.py  no_thanks_rl_play.py
mcts/: no_thanks_mcts.py
